[package]
name = "matrix-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = "0.6.2"
anyhow = "1.0.68"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.151" 
serde_json = "1.0.108"
rand = "0.8.5"
toml = "0.8.6"
scanrs = "0.3.0"
